syntax = "proto3";

package parser;

import "health/rpc.proto";
import "vendor/google/rpc/status.proto";


service ParserService {
  rpc Parse(ParseRequest) returns (ParseResponse);
}

// Chain represents supported blockchain networks
enum Chain {
  CHAIN_UNSPECIFIED = 0;
  CHAIN_BITCOIN = 1;
  CHAIN_ETHEREUM = 2;
  CHAIN_SOLANA = 3;
  CHAIN_SUI = 4;
  CHAIN_TRON = 5;

  // Reserve space for future chains
  reserved 6 to 998;

  // Custom for extensibility
  CHAIN_CUSTOM = 999;
}


// This is a bit odd, but needed for the QOS host.
// (the QOS host receives messages which can be either parser responses or QOS-level responses)
// TODO: can we remove the need for these?
message QOSParserRequest {
  oneof input {
    ParseRequest parse_request = 1;
    health.AppHealthRequest health_request = 2;
  }
}

message QOSParserResponse {
  oneof output {
    ParseResponse parse_response = 1;
    health.AppHealthResponse health_response = 3;
    google.rpc.Status status = 4;
  }
}

message ParseRequest {
  string unsigned_payload = 1;
  Chain chain = 2;
  ChainMetadata chain_metadata = 3;
}

message ChainMetadata {
  oneof metadata {
    EthereumMetadata ethereum = 1;
    SolanaMetadata solana = 2;
  }
}

message ParseResponse {
  ParsedTransaction parsed_transaction = 1;
}

message Metadata {
  string key = 1;
  string value = 2;
}

message SignatureMetadata {
  string value = 1;                    // Signature of content hash (computed over parent content using algorithm specified in metadata)
  repeated Metadata metadata = 2;      // Generic metadata about the signature (e.g., algorithm, issuer, timestamp as key-value pairs)
}

message ParsedTransactionPayload {
  string signable_payload = 4;
}

message ParsedTransaction {
  ParsedTransactionPayload payload = 1;
  Signature signature = 2;
}

enum SignatureScheme {
  SIGNATURE_SCHEME_UNSPECIFIED = 0;
  // Scheme used for Turnkey app proofs
  SIGNATURE_SCHEME_TURNKEY_P256_EPHEMERAL_KEY = 1;
}

message Signature {
  SignatureScheme scheme = 1;
  string public_key = 2;
  string message = 3;
  string signature = 4;
}

message EthereumMetadata {
  optional Abi abi = 1;
}

message SolanaMetadata {
  optional Idl idl = 1;
}

message Abi {
  string value = 1;                         // JSON ABI definition
  optional SignatureMetadata signature = 2; // Optional ABI signature with metadata
}

message Idl {
  string value = 1;                         // JSON IDL (Interface Definition Language) definition
  optional SolanaIdlType idl_type = 2;      // Type of Solana IDL (e.g., Anchor)
  optional string idl_version = 3;          // IDL version (e.g., "0.30.0")
  optional SignatureMetadata signature = 4; // Optional IDL signature with metadata
}

enum SolanaIdlType {
  SOLANA_IDL_TYPE_UNSPECIFIED = 0;
  SOLANA_IDL_TYPE_ANCHOR = 1;
}
